--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
-recursive-include honeypot-signals *
+recursive-include honeypot_signals *.py *.html *.txt *.js
 include README.rst DESCRIPTION
 exclude *.orig *.pyc *.wpr
